Bug 43584 - Wocky dataforms serialization segfault
Summary: Wocky dataforms serialization segfault
Status: RESOLVED FIXED
Alias: None
Product: Wocky
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://cgit.collabora.com/git/user/al...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2011-12-07 09:16 UTC by Alban Crequy
Modified: 2012-01-04 05:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Alban Crequy 2011-12-07 09:16:01 UTC
Function add_field_to_node_using_default() can segfault with the following code:

  form = g_object_new (WOCKY_TYPE_DATA_FORM, NULL);
  wocky_data_form_set_string (form, "field", "value", TRUE);
  wocky_data_form_add_to_node (form, ...);

field->raw_value_contents is not initialized because the field does not come from a WockyNode.

The following patches fix the crash.
Comment 1 Jonny Lamb 2011-12-13 02:12:41 UTC
I re-ordered the top two patches so the test comes after the fix (in an attempt to not break bisecting); then pushed the commits upstream.

Thanks for the patches!
Comment 2 Alban Crequy 2012-01-04 05:25:53 UTC
For the record, this fix is included in telepathy-gabble 0.15.4.
Comment 3 Alban Crequy 2012-01-04 05:27:12 UTC
(In reply to comment #2)
> For the record, this fix is included in telepathy-gabble 0.15.4.

Sorry, I meant telepathy-gabble 0.15.3.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.